# papermind

./: .gitignore  CLAUDE_INTEGRATION.md  MANIFEST.in  PLAN.md  README.md  USAGE.md  pyproject.toml  test_api_quick.py
examples/: claude_demo.py
papermind/: __init__.py  cli.py  config.py
papermind/claude/: README.md  __init__.py  client.py  prompts.py
papermind/obsidian/: __init__.py  sync.py
papermind/pdf/: __init__.py  parser.py
papermind/zotero/: __init__.py  database.py
tests/: __init__.py  test_claude.py
